# response-adapter

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  TUTORIAL.md  deepseek_responses_adapter.py  test_deepseek_responses_adapter.py
.github/workflows/: ci.yml  release.yml
src/: adapter.rs  config.rs  lib.rs  main.rs  server.rs
tests/: adapter_tests.rs
